# JanGeschenk

./: .gitignore  CMakeLists.txt  README.md  Webconsole.hpp  Webgame.hpp  a.out  cia.py  conanfile.txt  main.cpp  main.html  makefile
web/: index.html
